--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -744,66 +744,71 @@
                             godkänner du att personer från kommunen, samt från föreningen “Alla Tillsammans i Danderyd”, kan komma att 
                             kontakta dig via telefon eller mail med information och stöd relaterad till din anmälan.
                         </li>
-                          <p>
-                            <strong>Integritetspolicy</strong>
-                        </p>
-                          <p>
-                            <strong>Personuppgiftsansvarig</strong>
-                        </p>
+                    </ul>
+                    <h2>Integritetspolicy</h2>
+                    <h3>Personuppgiftsansvarig</h3>
                         <p>
                             Nya Kompisbyrån är personuppgiftsansvarig för behandlingen av dina personuppgifter. Våra kontaktuppgifter är:
-                       </p> 
-                         <p>      Nya Kompisbyrån, org nr 802491-8990
-                       <br/>     
-                           Adress: Magnus Ladulåsgatan 3, 118 65
-                        <br/>
-                              Kontaktperson: Mardin Baban, 079-337 56 97, mardin@nyakompisbyran.se
-                        <br/>
-                        </p>
-                         <p>
-                            <strong>Ändamål</strong>
                         </p>
                         <p>
-                            Nya Kompisbyrån använder dina personuppgifter för följande syften:
+                            Nya Kompisbyrån, org nr 802491-8990
+                            <br/>
+                            Adress: Magnus Ladulåsgatan 3, 118 65
+                            <br/>
+                            Kontaktperson: Mardin Baban, 079-337 56 97, mardin@nyakompisbyran.se
+                            <br/>
                         </p>
-                        
-                            1.Nya Kompisbyrån använder de personuppgifter som du har lämnat om dig själv för att matcha ihop dig med en annan 
+                    <h3>Ändamål</h3>
+                    <p>
+                        Nya Kompisbyrån använder dina personuppgifter för följande syften:
+                    </p>
+                    <ul>
+                        <li>
+                            Nya Kompisbyrån använder de personuppgifter som du har lämnat om dig själv för att matcha ihop dig med en annan
                             av våra användare. Exempelvis för en fikakompis, digitalkompis eller som middagsgäst. I detta ingår att 
                             vi presenterar deltagare som vi har matchat ihop för varandra med namn.
-                       <br/>
-                            2. Vi kan också komma att bjuda in dig till Nya Kompisbyråns aktiviteter eller erbjudanden.
-                       <br/>
-                            3. Efter ett fikamöte, digitalt möte eller en middag kommer vi att kontakta dig för att fråga hur det var. 
-                       <br/>
-                            4. Informationen används också för att kunna besvara frågor, driva och förbättra vår webbplats och program.
-                       <br/>
-                            5. Dina personuppgifter kan delas med andra aktörer om det krävs för att Nya Kompisbyrån ska kvalificera sig för stöd 
-                                eller bidrag. Detta kan gälla offentliga organ eller privata företag som sponsrar Nya Kompisbyråns verksamhet. 
-                                Dessa andra aktörer har inte tillåtelse att använda dina personuppgifter till marknadsföring eller till något annat 
-                                än för att undersöka att vår verksamhet når upp till deras krav.
-                        <br/>
-                            6. Dina personuppgifter kan även komma att delas med Uppsala universitet för utvärderings- och forskningssyfte. 
+                        </li>
+                        <li>
+                            Vi kan också komma att bjuda in dig till Nya Kompisbyråns aktiviteter eller erbjudanden.
+                        </li>
+                        <li>
+                            Efter ett fikamöte, digitalt möte eller en middag kommer vi att kontakta dig för att fråga hur det var.
+                        </li>
+                        <li>
+                            Informationen används också för att kunna besvara frågor, driva och förbättra vår webbplats och program.
+                        </li>
+                        <li>
+                            Dina personuppgifter kan delas med andra aktörer om det krävs för att Nya Kompisbyrån ska kvalificera sig för stöd
+                            eller bidrag. Detta kan gälla offentliga organ eller privata företag som sponsrar Nya Kompisbyråns verksamhet.
+                            Dessa andra aktörer har inte tillåtelse att använda dina personuppgifter till marknadsföring eller till något annat
+                            än för att undersöka att vår verksamhet når upp till deras krav.
+                        </li>
+                        <li>
+                            Dina personuppgifter kan även komma att delas med Uppsala universitet för utvärderings- och forskningssyfte.
                             I samband med detta kan Uppsala universitet även begära in ytterligare personuppgifter från SCB. Uppgifterna kommer 
                             alltid att vara helt anonyma vid publikation. Uppsala universitet är personuppgiftsansvariga för behandlingen i 
                             utvärderings- och forskningssyfte
-                        <br/>
-                            7. Utöver detta måste Nya Kompisbyrån lämna vidare dina uppgifter om det framgår av lag att vi måste det.
-                        <p>
-                            <strong>Samtycke</strong>
-                        </p>
-                       <li>
-                            För att kunna tillhandahålla tjänsten behöver vi ditt samtycke för att behandla personuppgifter om dig såsom namn, 
-                            ålder, personnummer/samordningsnummer (gäller bara ny svensk), telefonnummer, e-postadress, kön, 
+                        </li>
+                        <li>
+                            Utöver detta måste Nya Kompisbyrån lämna vidare dina uppgifter om det framgår av lag att vi måste det.
+                        </li>
+                    </ul>
+                    <h3>Samtycke</h3>
+                    <ul>
+                        <li>
+                            För att kunna tillhandahålla tjänsten behöver vi ditt samtycke för att behandla personuppgifter om dig såsom namn,
+                            ålder, personnummer/samordningsnummer (gäller bara ny svensk), telefonnummer, e-postadress, kön,
                             bostadskommun, IP-adress, bilder, ursprungsland och uppgift om inskrivning hos Arbetsförmedlingen 
                             (gäller bara ny svensk).
-                       </li>
-                        <li>Du har rätt att när som helst ta tillbaka ditt samtycke. Detta gör du genom att kontakta [Nya Kompisbyrån] 
+                        </li>
+                        <li>
+                            Du har rätt att när som helst ta tillbaka ditt samtycke. Detta gör du genom att kontakta [Nya Kompisbyrån]
                             på e-postadressen kontakt@nyakompisbyran.se. OBS dock att ett återkallande av ditt samtycke inte påverkar 
                             lagligheten av behandlingen innan samtycket återkallades.
                         </li>
-                          <p>
-                            <strong>Dina rättigheter</strong>
-                        </p>
+                    </ul>
+                    <h3>Dina rättigheter</h3>
+                    <ul>
                         <li>
                             Du har rätt att kontakta oss för att få information om vilka uppgifter som behandlas om dig, ett s.k. registerutdrag, 
                             eller för att begära rättelse eller begränsning av dina personuppgifter. Du har rätt att i vissa fall få 
@@ -819,16 +824,15 @@
                         <li>
                             Om du vill avregistrera dig, skicka ett e-mail till kontakt@nyakompisbyran.se. Nya Kompisbyrån tar då bort dina uppgifter.
                         </li>
-                        <p>
-                            <strong>Lagring av personuppgifter</strong>
-                        </p>
+                    </ul>
+                    <h3>Lagring av personuppgifter</h3>
+                    <ul>
                         <li>
                             Om du har blivit matchad eller blivit matchningsbar men ingen matchning skett tas dina uppgifter bort 
                             efter ett (1) år. Om de uppgifter du har lämnat inte är korrekta eller fullständiga får du ett 
                             påminnelsemail från oss. Om du ej anger korrekta och/eller fullständiga uppgifter tas dina uppgifter 
                             bort efter tre (3) månader.                        
                         </li>
-                      
                     </ul>]]></target>
             </trans-unit>
             <trans-unit id="terms.outro">
